README add comment

--- a/README
+++ b/README
@@ -26,7 +26,7 @@ cat app/inserts.sql | docker exec -i postgres psql -U postgres -d db2
 
 --------------------------------------------------------------------------------------
 
-О том что не сделано:
+О том что НЕ сделано:
 
 Много что стоит дописать/изменить, но тратить больше времени уже не совсем рационально. 
 Стоит добавить больше полей в сущности. 
@@ -38,6 +38,7 @@ cat app/inserts.sql | docker exec -i postgres psql -U postgres -d db2
 Для PaymentProcessor можно было бы сделать общий интерфейс как минимум.
 Можно было бы написать больше Value Object объектов для Money и тд.
 
+Очень большие контроллеры, требуется рефакторинг. Хотя бы вынести проверки в другие методы.
 
 --------------------------------------------------------------------------------------------
 
