--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Мой проект тестового задания
+Мой проект Api сервиса для работы с заказами.
 
 
 --------------------------------------------------------------------------------------------
